# nodegui-plugin-style-tweaker

./: CMakeLists.txt  README.md  package.json
.github/workflows/: build.yml
scripts/: setupBinary.js
src/: addon.ts  demo.ts  index.ts
src/cpp/: StyleTweaker.cpp  StyleTweaker.h  StyleTweaker_wrap.cpp  StyleTweaker_wrap.h  main.cpp
